--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -1,28 +1,28 @@
 <html>
-
-    <form action="register" method="POST" >
-        <table style="margin: auto;border: solid orange 1px;padding: 10px;" >
-            <tr>
-                <td colspan="2" style="text-align: center">
-                    <b style="color : red"><%=locals.message %></b>
-                </td>
-            </tr>
-            <tr>
-                <td> <label>Email</label></td>
-                <td>  <input name="email" /></td>
-            </tr>
-            <tr>
-                <td> <label>Pseudo</label></td>
-                <td>  <input  name="pseudo" /></td>
-            </tr>
-            <tr>
-                <td><label>Mot de passe</label></td>
-                <td><input type="password" value="Password4968!@" name="password" /></td>
-            </tr>
-            <tr><td> <button  type="submit">Valider</button></td>
-            </tr>
-        </table>
-
-    </form>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <div class="container">
+        <div class="mt-4 row justify-content-center">
+        <div class="col-12 mb-2"><h1 class="text-center">Inscription</h1></div>
+        <form class="col-sm-6" action="login" method="POST">
+            <div class="form-group">
+                <label for="Pseudo">Pseudo</label>
+                <input type="text" class="form-control" name="pseudo">
+            </div>
+            <div class="form-group">
+              <label for="email">Email address</label>
+              <input type="email" class="form-control" name="email">
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input type="password" class="form-control" name="password" >
+            </div>
+            <div class="form-group">
+                <b style="color : red" class="form-text text-muted"><%=locals.message %></b>
+            </div>
+            <button type="submit" class="btn btn-primary">S'inscrire</button>
+            <a href="/login">Se connecter</a>
+          </form>
+        </div>
+    </div>
 
 </html>
