--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -5,12 +5,12 @@
         <div class="col-12 mb-2"><h1 class="text-center">Ravi de vous revoir ;)</h1></div>
         <form class="col-sm-6" action="login" method="POST">
             <div class="form-group">
-              <label for="email">Email address</label>
-              <input type="email" class="form-control" name="email">
+              <label for="emailLogin">Email address</label>
+              <input type="email" class="form-control" name="email" id="emailLogin">
             </div>
             <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" name="password" >
+              <label for="passwordLogin">Password</label>
+              <input type="password" class="form-control" name="password" id="passwordLogin" >
             </div>
             <div class="form-group">
                 <b style="color : red" class="form-text text-muted"><%=locals.message %></b>
