--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -5,16 +5,16 @@
         <div class="col-12 mb-2"><h1 class="text-center">Inscription</h1></div>
         <form class="col-sm-6" action="login" method="POST">
             <div class="form-group">
-                <label for="Pseudo">Pseudo</label>
-                <input type="text" class="form-control" name="pseudo">
+                <label for="pseudoRegister">Pseudo</label>
+                <input type="text" class="form-control" name="pseudo" id="pseudoRegister">
             </div>
             <div class="form-group">
-              <label for="email">Email address</label>
-              <input type="email" class="form-control" name="email">
+              <label for="emailRegister">Email address</label>
+              <input type="email" class="form-control" name="email" id="emailRegister">
             </div>
             <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" name="password" >
+              <label for="passwordRegister">Password</label>
+              <input type="password" class="form-control" name="password" id="passwordRegister">
             </div>
             <div class="form-group">
                 <b style="color : red" class="form-text text-muted"><%=locals.message %></b>
