--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -3,21 +3,30 @@
     <div class="container">
         <div class="mt-4 row justify-content-center">
         <div class="col-12 mb-2"><h1 class="text-center">Inscription</h1></div>
-        <form class="col-sm-6" action="login" method="POST">
+        <form class="col-sm-6 needs-validation" action="register" method="POST" novalidate>
             <div class="form-group">
                 <label for="pseudoRegister">Pseudo</label>
-                <input type="text" class="form-control" name="pseudo" id="pseudoRegister">
+                <input type="text" class="form-control" name="pseudo" id="pseudoRegister" required>
+                <div class="invalid-feedback has-validation">
+                  Entre un pseudo.
+                </div>
             </div>
             <div class="form-group">
-              <label for="emailRegister">Email address</label>
-              <input type="email" class="form-control" name="email" id="emailRegister">
+              <label for="emailRegister">Adresse Email</label>
+              <input type="email" class="form-control" name="email" id="emailRegister" required>
+              <div class="invalid-feedback has-validation">
+                Entre un email.
+              </div>
             </div>
             <div class="form-group">
-              <label for="passwordRegister">Password</label>
-              <input type="password" class="form-control" name="password" id="passwordRegister">
+              <label for="passwordRegister">Mot de passe</label>
+              <input type="password" class="form-control" name="password" id="passwordRegister" required>
+              <div class="invalid-feedback has-validation">
+                Entre un mot de passe.
+              </div>
             </div>
             <div class="form-group">
-                <b style="color : red" class="form-text text-muted"><%=locals.message %></b>
+                <span style="color : #dc3545" class="form-text"><%=locals.message %></span>
             </div>
             <button type="submit" class="btn btn-primary">S'inscrire</button>
             <a href="/login">Se connecter</a>
@@ -26,3 +35,26 @@
     </div>
 
 </html>
+
+<script>
+  // Example starter JavaScript for disabling form submissions if there are invalid fields
+ (function () {
+   'use strict'
+ 
+   // Fetch all the forms we want to apply custom Bootstrap validation styles to
+   var forms = document.querySelectorAll('.needs-validation')
+ 
+   // Loop over them and prevent submission
+   Array.prototype.slice.call(forms)
+     .forEach(function (form) {
+       form.addEventListener('submit', function (event) {
+         if (!form.checkValidity()) {
+           event.preventDefault()
+           event.stopPropagation()
+         }
+ 
+         form.classList.add('was-validated')
+       }, false)
+     })
+ })()  
+ </script>
