--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -1,4 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <%- include('./links'); %>
+  <title>Connexion</title>
+</head>
+<body>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <div class="container">
         <div class="mt-4 row justify-content-center">
@@ -51,3 +60,7 @@
     })
 })()  
 </script>
+
+</body>
+</html>
+
