--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -1,5 +1,13 @@
-<html>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <%- include('./links'); %>
+  <title>Inscription</title>
+</head>
+<body>
     <div class="container">
         <div class="mt-4 row justify-content-center">
         <div class="col-12 mb-2"><h1 class="text-center">Inscription</h1></div>
@@ -34,7 +42,6 @@
         </div>
     </div>
 
-</html>
 
 <script>
   // Example starter JavaScript for disabling form submissions if there are invalid fields
@@ -58,3 +65,6 @@
      })
  })()  
  </script>
+
+</body>
+</html>
