--- a/app/views/game.ejs
+++ b/app/views/game.ejs
@@ -27,15 +27,19 @@
           <div class="row justify-content-center">
             <div class="col-sm-7">
               <p class="form-text mt-5">Vous pouvez rajouter des options :</p>
+
+              <% if(theme != "") { %>
               <div class="form-group">
                 <label for="selectTheme">Thème</label>
                 <select name="theme" class="form-control" id="selectTheme">
-                  <option value="<%= theme[0] %>" selected><%= theme[0] %></option>
+                  <option value="<%= theme[0].id %>" selected><%= theme[0].name %></option>
                     <% for(var i=1; i < theme.length; i++) { %>
-                    <option style="text-transform: capitalize;" value="<%= theme[i] %>"><%= theme[i] %></option>
+                    <option style="text-transform: capitalize;" value="<%= theme[i].id %>"><%= theme[i].name %></option>
                     <% } %>
                 </select>
               </div>
+              <% } %>
+
               <div class="form-group">
                 <label for="selectTheme">Difficulté</label>
                 <select name="difficulty" class="form-control" id="selectTheme">
