--- a/app/views/dashboard.ejs
+++ b/app/views/dashboard.ejs
@@ -10,12 +10,16 @@
 <body>
     <%- include('./navbar'); %>
     <div class="container">
-        <div class="mt-4 row justify-content-center">
-          <div class="col mb-2">
-            <h1 class="text-center">Vos résultats</h1>
-          </div>
+      <div class="mt-4 row justify-content-center">
+        <div class="col mb-2">
+          <h1 class="text-center">Vos résultats</h1>
         </div>
       </div>
+      <div class="row justify-content-center">
+        <h5>Votre score générale est de <%= stat %> % </h5>
+      </div>
+    </div>
+      
 
 </body>
 </html>
