--- a/app/views/quiz.ejs
+++ b/app/views/quiz.ejs
@@ -19,13 +19,13 @@
             <div class="row mt-4 justify-content-center">
                 <div class="">
                     <h5>
-                        <%= quest[0].question %>
+                        <%- quest[0].question %>
                     </h5>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <% for(var y=0; y < quest[0]["incorrect_answers"].length; y++) { %>
-                    <div id='0-<%= [y] %>' class="col-sm-4 btn btn-lg btn-outline-primary m-2 button-quest choice-0"><%= quest[0]["incorrect_answers"][y] %></div>
+                    <div id='0-<%= [y] %>' class="col-sm-4 btn btn-lg btn-outline-primary m-2 button-quest choice-0"><%- quest[0]["incorrect_answers"][y] %></div>
                 <% } %>
             <input id="answer-0" type="hidden" value="<%= quest[0]['correct_answer'] %>">
             </div>
@@ -35,13 +35,13 @@
             <div class="row justify-content-center">
                 <div class="">
                     <h5>
-                        <%= quest[i].question %>
+                        <%- quest[i].question %>
                     </h5>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <% for(var y=0; y < quest[i]["incorrect_answers"].length; y++) { %>
-                    <div id='<%= [i] %>-<%= [y] %>' class="col-sm-4 btn btn-lg btn-outline-primary m-2 button-quest choice-<%= [i] %>"><%= quest[i]["incorrect_answers"][y] %></div>
+                    <div id='<%= [i] %>-<%= [y] %>' class="col-sm-4 btn btn-lg btn-outline-primary m-2 button-quest choice-<%= [i] %>"><%- quest[i]["incorrect_answers"][y] %></div>
                 <% } %>
             </div>
         </div>
