--- a/app/views/quiz.ejs
+++ b/app/views/quiz.ejs
@@ -54,6 +54,7 @@
     <form id="finishQuiz" action="dashboard" method="POST">
         <input type="hidden" id="finishNumberOfQuestions" name="numberOfQuestions" value="">
         <input type="hidden" id="finishScore" name="score" value="">
+        <input type="hidden" id="finishName" name="name" value="<%= quest[0]['category'] %>">
     </form>
 
 </body>
