--- a/app/views/dashboard.ejs
+++ b/app/views/dashboard.ejs
@@ -15,9 +15,23 @@
           <h1 class="text-center">Vos résultats</h1>
         </div>
       </div>
-      <div class="row justify-content-center">
+      <div class="row justify-content-center mt-4">
         <h5>Votre score générale est de <%= stat %> % </h5>
       </div>
+      <div class="row justify-content-center mt-4">
+        <h5>Vos dernière parties : </h5>
+      </div>
+      <% if(games != "") { %>
+        <div class="row mt-3">
+          <% for(var i=1; i < games.length; i++) { %>
+          <div class="col-sm-3 ">
+            <p><b><%= games[i].name %></b>
+            <br>Score : <%= games[i].finalScore %>/<%= games[i].numberOfQuestions %>
+            <br>Date : <%= games[i].date %></p>
+          </div>
+          <% } %>
+        </div>
+      <% } %>
     </div>
       
 
